syntax = "proto3";

package kazegusuri.example;
option go_package = "examples";

import "anonymizer.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message SimpleMessage {
  string string_value = 1 [(kazegusuri.anonymizer.field) = {method: NULL}];
  bool bool_value = 2 [(kazegusuri.anonymizer.field) = {method: NULL}];
}

message NumberMessage {
  float float_value = 1 [(kazegusuri.anonymizer.field) = {method: NULL}];
  double double_value = 2 [(kazegusuri.anonymizer.field) = {method: NULL}];

  int32 int32_value = 3 [(kazegusuri.anonymizer.field) = {method: NULL}];
  int64 int64_value = 4 [(kazegusuri.anonymizer.field) = {method: NULL}];
  uint32 uint32_value = 5 [(kazegusuri.anonymizer.field) = {method: NULL}];
  uint64 uint64_value = 6 [(kazegusuri.anonymizer.field) = {method: NULL}];
  sint32 sint32_value = 7 [(kazegusuri.anonymizer.field) = {method: NULL}];
  sint64 sint64_value = 8 [(kazegusuri.anonymizer.field) = {method: NULL}];

  fixed32 fixed32_value = 9 [(kazegusuri.anonymizer.field) = {method: NULL}];
  fixed64 fixed64_value = 10 [(kazegusuri.anonymizer.field) = {method: NULL}];
  sfixed32 sfixed32_value = 11 [(kazegusuri.anonymizer.field) = {method: NULL}];
  sfixed64 sfixed64_value = 12 [(kazegusuri.anonymizer.field) = {method: NULL}];
}

message RepeatedNumberMessage {
  repeated float float_values = 1 [(kazegusuri.anonymizer.field) = {method: NULL}];
  repeated double double_values = 2 [(kazegusuri.anonymizer.field) = {method: NULL}];

  repeated int32 int32_values = 3 [(kazegusuri.anonymizer.field) = {method: NULL}];
  repeated int64 int64_values = 4 [(kazegusuri.anonymizer.field) = {method: NULL}];
  repeated uint32 uint32_values = 5 [(kazegusuri.anonymizer.field) = {method: NULL}];
  repeated uint64 uint64_values = 6 [(kazegusuri.anonymizer.field) = {method: NULL}];
  repeated sint32 sint32_values = 7 [(kazegusuri.anonymizer.field) = {method: NULL}];
  repeated sint64 sint64_values = 8 [(kazegusuri.anonymizer.field) = {method: NULL}];

  repeated fixed32 fixed32_values = 9 [(kazegusuri.anonymizer.field) = {method: NULL}];
  repeated fixed64 fixed64_values = 10 [(kazegusuri.anonymizer.field) = {method: NULL}];
  repeated sfixed32 sfixed32_values = 11 [(kazegusuri.anonymizer.field) = {method: NULL}];
  repeated sfixed64 sfixed64_values = 12 [(kazegusuri.anonymizer.field) = {method: NULL}];
}

message NestedMessage {
  message Nested {
    int32 int32_value = 1 [(kazegusuri.anonymizer.field) = {method: NULL}];
    string string_value = 2 [(kazegusuri.anonymizer.field) = {method: NULL}];
  }
  Nested nested_value = 1 [(kazegusuri.anonymizer.field) = {method: NULL}];
  repeated Nested repeated_nested_values = 2 [(kazegusuri.anonymizer.field) = {method: NULL}];

  Nested normal_nested_value = 3;
  repeated Nested normal_repeated_nested_values = 4;
}

message EnumMessage {
  NumericEnum numeric_enum_value = 1 [(kazegusuri.anonymizer.field) = {method: NULL}];
  repeated NumericEnum repeated_numeric_enum_values = 2 [(kazegusuri.anonymizer.field) = {method: NULL}];

  AliasedEnum aliased_enum_value = 3 [(kazegusuri.anonymizer.field) = {method: NULL}];

  enum Nested {
    UNKNOWN = 0;
    PENDING  = 1;
    COMPLETED  = 2;
  }
  Nested nested_enum_value = 4 [(kazegusuri.anonymizer.field) = {method: NULL}];
  repeated Nested repeated_nested_enum_values = 5 [(kazegusuri.anonymizer.field) = {method: NULL}];
}

enum NumericEnum {
  ZERO = 0;
  ONE  = 1;
  TWO  = 2;
}

enum AliasedEnum {
  option allow_alias = true;
  UNKNOWN = 0;
  STARTED = 1;
  RUNNING = 1;
}

message Oneof {
  oneof oneof_value {
    int32 int32_value = 1 [(kazegusuri.anonymizer.field) = {method: NULL}];
    string string_value = 2 [(kazegusuri.anonymizer.field) = {method: NULL}];
  }
}

message NormalOneof {
  oneof oneof_value {
    int32 int32_value = 1;
    string string_value = 2;
  }
}

message OneofMessage {
  oneof oneof_value {
    int32 int32_value = 1 [(kazegusuri.anonymizer.field) = {method: NULL}];
    string string_value = 2 [(kazegusuri.anonymizer.field) = {method: NULL}];
  }

  Oneof oneof_message_value = 3 [(kazegusuri.anonymizer.field) = {method: NULL}];
  repeated Oneof repeated_oneof_values = 4 [(kazegusuri.anonymizer.field) = {method: NULL}];

  Oneof normal_oneof_message_value = 5;
  repeated Oneof normal_repeated_oneof_values = 6;
}

message NormalOneofMessage {
  NormalOneof oneof_message_value = 3 [(kazegusuri.anonymizer.field) = {method: NULL}];
  repeated NormalOneof repeated_oneof_values = 4 [(kazegusuri.anonymizer.field) = {method: NULL}];

  NormalOneof normal_oneof_message_value = 5;
  repeated NormalOneof normal_repeated_oneof_values = 6;
}

message MapMessage {
  map<int32, string> mapped_value = 1 [(kazegusuri.anonymizer.field) = {method: NULL}];
  map<string, NumericEnum> mapped_enum_value = 2 [(kazegusuri.anonymizer.field) = {method: NULL}];
  map<string, NestedMessage> mapped_nested_value = 3 [(kazegusuri.anonymizer.field) = {method: NULL}];

  map<int32, string> normal_mapped_value = 4;
  map<string, NumericEnum> normal_mapped_enum_value = 5;
  map<string, NestedMessage> normal_mapped_nested_value = 6;
}

message WellKnownTypeMessage {
  google.protobuf.Duration duration = 1 [(kazegusuri.anonymizer.field) = {method: NULL}];
  google.protobuf.Timestamp timestamp = 2 [(kazegusuri.anonymizer.field) = {method: NULL}];
}
